--- a/src/index.html
+++ b/src/index.html
@@ -155,8 +155,8 @@
             laboriosam. Culpa consequuntur illum facere id molestias.</p>
           <a href="#" class="btn btn-outline-danger btn-lg">Learn More</a>
         </div>
-        <div class="col-md-6">
-          <img src="images/laptop.png" alt="" class="img-fluid">
+        <div class="col-md-6 pr-5">
+          <img src="images/kinkon.png" alt="" class="img-fluid">
         </div>
       </div>
     </div>
@@ -167,7 +167,7 @@
       <div class="row">
         <div class="col">
           <div class="container p-5">
-            <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA" data-toggle="modal"
+            <a href="#" class="video" data-video="https://twitter.com/superhi_/status/997492344705429505" data-toggle="modal"
               data-target="#videoModal">
               <i class="fa fa-play"></i>
             </a>
